tests/failing/opr2.tail
let v1:S(int,5) = 5 in
let v2:[double]0 = 5.20 in
let v3:[double]0 = addd(i2d(3),maxd(v2,4.50)) in
addd(i2d(v1),muld(v3,4.20))
